--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
+
+    <!-- Back to top button -->
     <button type="button" class="btn btn-info btn-floating btn-lg opacity-75" id="btn-back-to-top">
         <img src="img/arrow-up.svg" alt="">
     </button>
     </button>
-    <!-- navbar -->
+    <!-- Back to top button -->
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#"><img class="img-logo" src="https://placehold.co/600x400" alt="" /></a>
@@ -27,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link m-2" href="#">PROJECTS</a>
+                        <a class="nav-link m-2" href="#myProjects">PROJECTS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link m-2" href="#">MY RESUME</a>
@@ -51,9 +55,9 @@
             </div>
         </div>
     </nav>
-    <!-- navbar -->
+    <!-- Navbar -->
 
-    <!-- aboutMe -->
+    <!-- AboutMe -->
     <section>
         <div class="container mt-5">
             <div class="row">
@@ -81,9 +85,9 @@
             </div>
         </div>
     </section>
-    <!-- aboutMe -->
+    <!-- AboutMe -->
 
-    <!-- certifications -->
+    <!-- Certifications -->
     <div class="container text-center">
         <h1 class="fw-bold mt-5 mb-3" id="certificates">CERTIFICATIONS</h1>
         <div class="row">
@@ -123,9 +127,58 @@
             </div>
         </div>
     </div>
-    <!-- certifications -->
+    <!-- Certifications -->
 
-    <!-- footer -->
+    <!-- Projects -->
+    <div class="container text-center">
+        <h1 class="fw-bold mt-5 mb-3" id="myProjects">MY PROJECTS</h1>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://placehold.co/600x400" class="d-block w-100" alt="Project1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Project X</h5>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placehold.co/600x400" class="d-block w-100" alt="Project2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Project X</h5>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, porro.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placehold.co/600x400" class="d-block w-100" alt="Project3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Project X</h5>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <!-- Projects -->
+
+    <!-- Footer -->
     <div class="container mt-5">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-body-secondary">© 2024 Company, Inc</p>
@@ -134,21 +187,22 @@
                 <img src="https://placehold.co/600x400" width="40" height="37" alt="Logo">
             </a>
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">PROJECTS</a></li>
+                <li class="nav-item"><a href="#myProjects" class="nav-link px-2 text-body-secondary">PROJECTS</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">MYRESUME</a></li>
                 <li class="nav-item"><a href="#aboutMe" class="nav-link px-2 text-body-secondary">ABOUTME</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CERTIFICATIONS</a></li>
+                <li class="nav-item"><a href="#certificates" class="nav-link px-2 text-body-secondary">CERTIFICATIONS</a></li>
             </ul>
         </footer>
     </div>
-    <!-- footer -->
+    <!-- Footer -->
 
+    <!-- Scripts -->
+    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Custom scripts -->
-    <script type="text/javascript" src="scripts.js"></script>
+    <!-- Scripts -->
 
 </body>
 
